Chore: implemented class diagrams without relationships